--- a/MusicForum/Views/Home/Index.cshtml
+++ b/MusicForum/Views/Home/Index.cshtml
@@ -7,10 +7,13 @@
 <div class="home-header">
     RPM<br />
 </div>
-<p>
-    Music nerds everywhere! <br /> A place to discuss your favourite albums!
-    <hr />
-</p>
+<div class="discussion-row">   
+    <p>
+        Vinyl nerds rejoice! <br />
+        RPM is a home for music lovers to discuss their favourite albums.
+        <hr />
+    </p>
+</div>
 
 <div class="main-content">
     @foreach (var discussion in Model)
